Use new macro on FGS urls

--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -375,7 +375,7 @@ Calendar for deadlines\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.a
 your program.  Students must submit a \formGSPU to the \GS when a decision to
 make changes to course requirements is made.  Graduate Student Program
 Forms can be downloaded from the FGS
-website\furl{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html}.
+website\footnote{\label{footnote:fgs_forms}\footnotesize{\url{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html}}}.
 Failure to submit a \formGSP within the stated timetable can result in the
 assessment of additional fees for courses not included in the program
 requirements, or affect the ability to graduate.
@@ -398,11 +398,9 @@ requirements, or affect the ability to graduate.
 All Dalhousie 
 graduate students must achieve a grade of B- or higher in all
 classes required as part of their degree program \cav{7}{Degree Requirements}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850}. The only grade that can be
-assigned below a ``B-'' is an ``F''. Any student who receives an F will be withdrawn
+assigned below a ``B-'' is an ``F''. Any student who receives an~F will be withdrawn
 from the Graduate Program and must apply for re-admission. Such a student may
-apply, in writing, to the department for immediate reinstatement; see \FGS
-Regulations, section~5.4.1: Readmission of
-Students\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10848}.
+apply, in writing, to the department for immediate reinstatement~\cav{5.4.1}{Reinstatement of Students}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10848}.
 Reinstatement to a program after a failing grade must be supported by the \GC,
 and must be approved in writing by the Faculty of Graduate Studies. If
 readmitted, any subsequent ``F'' will result in a final program dismissal. Any
@@ -419,10 +417,9 @@ official transcript.
 examination of class descriptions\fixme{Q: who approves these? I've done that
 as the professor for my own course. Is that the rule, or the habit?}) can be
 taken at other universities as part of the graduate degree program, provided
-the class is not available at Dalhousie; see \FGS Regulations, section 7.6.6:
-Letters of Permission\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850}.
+the class is not available at Dalhousie\cav{7.6.6}{Letters of Permission}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850}.
 The Letter of Permission, available at the \FGS
-website\furl{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html},
+website\cref{footnote:fgs_forms},
 must be completed and submitted to the \GC in advance. Such approval will not
 be given retroactively.\fixme{NB: need to check with Lori on what we have done
 in the past, and what FGS or the registrar says we must do now.}
@@ -565,10 +562,10 @@ are advised to keep this up to date.
 \cp
 
 \p Graduate students have a maximum period of time within which to complete
-their graduate program, 4 years for MSc and 6 years for PhD.  Extensions may be
-granted by FGS on the recommendation of the department, along with a
+their graduate program, 5~years for MSc and 6~years for PhD~\cav{7.1}{Maximum Time for Degree Completion and Extensions}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850}.  Extensions may be
+granted by FGS on the recommendation of the Department, along with a
 satisfactory Progress
-Report\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850}.
+Report\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850}.\fixme{I don't think we should state this ``along with''}
 
 \section{Supervision}
 
@@ -819,7 +816,7 @@ Studies\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=view
 \p The MSc thesis should report original research and be in a satisfactory and
 consistent literary form. Faculty of Graduate Studies thesis formatting
 requirements are available on their
-website\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=2&chapterid=399&topicgroupid=1435}.
+website\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=2&chapterid=399&topicgroupid=1435}. \fixme{Link seems to have changed over the past few months.}
 
 \p The oral defence of the thesis is open to all members of the department and
 to other interested persons. Notices of the thesis defence, including an
@@ -1744,11 +1741,13 @@ violation of the right to work. OK to delete? DK=yes, BB=yes}.
 
 \cp
 
-\p Section VI of the \FGS
-calendar\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10849}
-lays out guidelines on \di{intellectual property}, \di{conflict of interest},
-\di{intellectual honesty}, \di{plagiarism}, \di{scholarly integrity}, \etc, and
-students are expected to be familiar with and follow these policies.
+%\p The \FGS lays out~\cav{6}{blah}{{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10849}
+
+\p The University specifies
+guidelines~\cav{6}{Intellectual Property and Conflict of Interest}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10849}
+on \di{intellectual property}, \di{conflict of interest}, \di{intellectual
+honesty}, \di{plagiarism}, \di{scholarly integrity}, \etc, and students are
+expected to be familiar with and follow these policies.
 
 % \p \fixme{DK to LL: I think this is handled by FGS rules. Can you find a URL, if so?}
 % The Faculty of Graduate Studies is developing
