--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -40,8 +40,10 @@
 \newcommand\ie{i.e.\xspace}
 \newcommand\eg{e.g.\xspace}
 \newcommand\etc{etc.\xspace}
-\newcommand\qe{PhD Qualifying Examination\index{PhD Qualifying Examination}\xspace}
-\newcommand\QE{PhD Qualifying Examination\index{PhD Qualifying Examination}\xspace}
+%\newcommand\qe{PhD Qualifying Examination\index{PhD Qualifying Examination}\xspace}
+\newcommand\qe{PhD Qualifying Examination\xspace}
+%\newcommand\QE{PhD Qualifying Examination\index{PhD Qualifying Examination}\xspace}
+\newcommand\QE{PhD Qualifying Examination\xspace}
 
 \newcommand\delete[1]{\color{deleteColor}\sout{\textbf{#1}}\color{black}\xspace%
 \marginpar{\color{deleteColor}$\Delta$\color{black}}}
@@ -115,12 +117,14 @@
 \newcommand{\GS}{Graduate Secretary\xspace}
 %\newcommand{\formAPR}{\index{forms!Annual Progress Report}\color{diColor}Annual Progress Report Form\color{black}\xspace}
 \newcommand{\formAPR}{Annual Progress Report Form\xspace}
-\newcommand{\formGSP}{\index{forms!Graduate Student Program}\color{diColor}Graduate Student Program Form\color{black}\xspace}
+%\newcommand{\formGSP}{\index{forms!Graduate Student Program}\color{diColor}Graduate Student Program Form\color{black}\xspace}
+\newcommand{\formGSP}{Graduate Student Program Form\xspace}
 %\newcommand{\formGSPU}{\index{forms!Graduate Student Program}\color{diColor}Graduate Student Program Update Form\color{black}\xspace}
 \newcommand{\formGSPU}{Graduate Student Program Update Form\xspace}
 %\newcommand{\formSPRF}{\index{forms!Supplementary Program Report}\color{diColor}Supplementary Program Report Form\color{black}\xspace}
 \newcommand{\formSPRF}{Oceanography Supplementary Program Report Form\xspace}
-\newcommand{\formST}{\index{forms!Sea Time}\color{diColor}Sea Time Form\color{black}\xspace}
+%\newcommand{\formST}{\index{forms!Sea Time}\color{diColor}Sea Time Form\color{black}\xspace}
+\newcommand{\formST}{Sea Time Form\xspace}
 %\newcommand{\FGS}{\index{Faculty of Graduate Studies (\textsc{fgs})}\color{diColor}\textsc{fgs}\color{black}\xspace}
 %\newcommand{\FGS}{\index{Faculty of Graduate Studies (FGS)}\color{diColor}FGS\color{black}\xspace}
 \newcommand{\FGS}{FGS\xspace}
@@ -456,8 +460,8 @@ for requirements in the MSc and PhD programs, respectively.
 % circumstances.
 
 \p The Department of Oceanography has a longstanding tradition of requiring its
-graduate students to go to sea\index{sea time} on research cruises as part of
-their degree requirements. This tradition meets several objectives:
+graduate students to go to sea as part of their degree requirements. This
+tradition meets several objectives:
 
 \begin{itemize}
 
@@ -566,9 +570,7 @@ granted by FGS on the recommendation of the Department.
 
 \section{Supervision}
 
-\fixme{the meeting on 2017-04-10 will address this section in the context of the FGS rules}
-
-
+\fixme{the meeting on 2017-04-10 will address this section in the context of the FGS rules}\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10852}
 
 %A9.3	SUPERVISOR
 \subsection{Supervisor}
@@ -629,7 +631,7 @@ responsibilities of a co-supervisor include:
 
 \item Ensuring that adequate reports and records of committee meetings are kept
     and submitted to the appropriate departmental files, and that necessary
-    decisions as to the academic program, (e.g. thesis proposal), are made on
+    decisions as to the academic program, (\eg thesis proposal), are made on
     an appropriate time-scale.
 
 \item Assessing the progress of the student both in academic work and research.
@@ -756,10 +758,9 @@ matter.
 % higher, at least three of which must be chosen from the introductory core
 % courses (refer to section~\ref{sec:courses}).
 
-\p Any student who anticipates a \index{transfer from MSc to PhD} transfer from
-the MSc program to the PhD program should complete the course-work and other
-requirements as listed in the PhD program requirements (see
-Section~\ref{sec:phd_program_requirements}).
+\p Any student who anticipates a transfer from the MSc program to the PhD
+program should complete the course-work and other requirements as listed in the
+PhD program requirements (see Section~\ref{sec:phd_program_requirements}).
 
 \subsection{\label{sec:msc_supervisory_committee_structure}MSc Supervisory Committee Structure}
 
@@ -1447,12 +1448,12 @@ designate).
 committee. The Departmental Representative or a designate normally performs
 this duty.
 
-\p Students must make the \index{thesis proposal} proposal available in the
-Department of Oceanography office at least 10 working days prior to the oral
-defence\vote{DK to GOC: I think we should have a form for this. OK? DK=yes,
-BB=yes}  The proposal typically receives input from the \supervisor or others
-prior to its submission. Approval from the \supcom is required to proceed with
-the oral defence.
+\p Students must make the proposal available in the Department of Oceanography
+office at least 10 working days prior to the oral defence\vote{DK to GOC: I
+think we should have a form for this. OK? DK=yes, BB=yes}  The proposal
+typically receives input from the \supervisor or others prior to its
+submission. Approval from the \supcom is required to proceed with the oral
+defence.
 
 %C4.2	PROPOSAL TIMELINE
 \subsubsection{Proposal timeline}
@@ -1466,7 +1467,7 @@ terms are more than adequate to complete this requirement. The scheduling of
 the proposal defence should be planned well in advance so that it can be
 carried out prior to the 20th month of the program.
 
-\p There is no restriction on early completion of the proposal and oral exam (e.g.
+\p There is no restriction on early completion of the proposal and oral exam (\eg
 in the summer between first and second years or fall term of second year).
 
 \p Because the proposal is a formal requirement of the Department, it carries the
@@ -1844,7 +1845,7 @@ conditions existed.
 \begin{enumerate}
 
     \item Procedural Unfairness.  (This means that the method used to
-        administer the academic process, e.g., an exam, was unreasonably and
+        administer the academic process, \eg, an exam, was unreasonably and
         inherently stacked against any person attempting the process.  Note:
         exams and their content, in and of themselves, are not procedurally
         unfair.  Differences in how an exam is administered between the
@@ -2046,7 +2047,7 @@ to appeal.
 
 \p The Ad Hoc Appeal Panel may not render decisions counter to
 Departmental, Faculty or University regulations, nor can it make decisions that
-go beyond strictly academic matters, e.g., financial or administrative.  If the
+go beyond strictly academic matters, \eg, financial or administrative.  If the
 requested resolution contains such points, these must be ignored and dismissed.   
 
 \p Matters involving allegations of ``failure to supervise'' by a
