cleanup some macros

--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -299,7 +299,7 @@ considered to have \di{lapsed registration}. Such students will not be
 permitted to submit a thesis, nor will they receive any services from the
 University during that academic term. Students who allow their registration to
 lapse will be considered to have withdrawn and will be required to apply for
-readmission~\cav{5}{Registration Procedures and Regulations}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10848}
+readmission~\cav{5}{Registration Procedures and Regulations}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10848}.
 
 
 %%A1.1	REGN 9999
@@ -363,7 +363,7 @@ these are offered every year. Details of offerings are available
 online\furl{https://dalonline.dal.ca/PROD/fysktime.P_DisplaySchedule?s_term=201710,201720&s_subj=OCEA&s_district=100}.
 
 
-\p Students must register for the 5xxx stream of any courses that are
+\p Graduate students must register for the 5xxx stream of any courses that are
 cross-listed to the 4000 levels (see Section~\ref{sec:msc_course_requirements}
 or \ref{sec:phd_course_requirements} for notes on the case in which 4000-level
 classes were taken previously) prior to the registration deadline.  See the
@@ -781,8 +781,8 @@ should be from a sub-discipline other than the student's own.
 
 \cp
 
-\p MSc students are expected to produce an approved \di[thesis
-proposal!MSc]{thesis proposal} within one year of enrolling in the program.
+\p MSc students are expected to produce an approved thesis proposal within one
+year of enrolling in the program.
 
 \p This document serves primarily as a well-reasoned course of action, and not
 as an exhaustive literature review nor as a deeply detailed description of
@@ -790,18 +790,17 @@ methods. This should be under fifteen pages of text, double-spaced and
 inclusive of diagrams and citations.\vote{DK to GOC: I made the length more
 specific. OK? DK=yes, BB=yes}
 
-\p The \di[thesis proposal!MSc]{proposal} is developed in consultation with the
-\supervisor and \supcom. The scope of the research should be such that the
-program can be completed within one year.
+\p The proposal is developed in consultation with the \supervisor and \supcom.
+The scope of the research should be such that the program can be completed
+within one year.
 
 \p Students may be required to defend their thesis proposals, at the discretion
 of their \supcom.  Such defences normally occur during a meeting of the
 \supcom, unlike in the PhD case, where they are public events.
 
-\p The \supervisor will notify the Oceanography Office that the \di[thesis
-proposal!MSc]{proposal} requirement has been satisfied and a copy of the
-approved proposal, signed by both student and \supervisor, must be placed on
-file with the \GS.
+\p The \supervisor will notify the Oceanography Office that the proposal
+requirement has been satisfied and a copy of the approved proposal, signed by
+both student and \supervisor, must be placed on file with the \GS.
 
 
 
@@ -1412,21 +1411,21 @@ granted by the CurrComm? BB answers "no"}
 
 \cp
 
-\p PhD students are expected to complete the \di[thesis proposal!PhD]{thesis
-proposal} and examination of the proposal within 20 months of enrolling in the
-graduate program.
+\p PhD students are expected to complete the thesis proposal and examination of
+the proposal within 20 months of enrolling in the graduate program.
 
-\p In order to proceed with the \di[thesis proposal!PhD]{proposal}, the student
-will have completed the required first-year courses, have a named \supervisor
-and \supcom, completed a \QE, and received approval from the \supervisor.\fixme{I added the QE part, on advice of BB}
+\p In order to proceed with the proposal, the student will have completed the
+required first-year courses, have a named \supervisor and \supcom, completed a
+\QE, and received approval from the \supervisor.\fixme{I added the QE part, on
+advice of BB}
 
-\p The requirement consists of a written \di[thesis proposal!PhD]{thesis
-proposal} and a public oral defence.  The written proposal will include an
-overview of the research topic and relevant background material, and a plan for
-carrying out the PhD research.  The oral portion is a defence of the proposal,
-including other relevant areas of Oceanography. The topics covered in the
-defence may relate not just to the planned research, but also to wider
-Oceanographic issues, as deemed appropriate by the defence committee.
+\p The requirement consists of a written thesis proposal and a public oral
+defence.  The written proposal will include an overview of the research topic
+and relevant background material, and a plan for carrying out the PhD research.
+The oral portion is a defence of the proposal, including other relevant areas
+of Oceanography. The topics covered in the defence may relate not just to the
+planned research, but also to wider Oceanographic issues, as deemed appropriate
+by the defence committee.
 
 \p The defence is open to attendance by all interested persons, except for the
 in-camera portion in which the decision is made by the examining committee.
